# node-wdt-native

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  package.json
lib/: wdt.js
src/: cvAverage.cc  cvAverage.h  cvCamShift.cc  cvCamShift.h  cvDisplayFormat.cc  cvDisplayFormat.h  cvMotion.cc  cvMotion.h  cvMultiplyS.cc  cvMultiplyS.h  init.cc  wAccumulate.cc  wAccumulate.h  wExtremes.cc  wExtremes.h  wMotion.cc  wMotion.h  wTrigger.cc  wTrigger.h
